Icons and Auto login
Moved login function to index.html so now auth starts on boot.

--- a/board.html
+++ b/board.html
@@ -1,8 +1,8 @@
 <div data-bb-type="screen" data-bb-effect="slide-right">
-<div data-bb-type="title" data-bb-caption="Board" id="titleBar" data-bb-action-caption="Edit" onactionclick="bb.pushScreen('board_edit.html','board_edit')" ></div>
+<div data-bb-type="title" data-bb-caption="Board" id="titleBar"></div>
 	<script  src="javascript/board.js"></script>
 
-	<div data-bb-type="image-list" data-bb-style="addbuttons" id="cardsList"></div>
+	<div data-bb-type="image-list" data-bb-style="arrowlist" id="cardsList"></div>
 
 	<div data-bb-type="action-bar" id="actionBar">
 	</div>
