--- a/card_edit.html
+++ b/card_edit.html
@@ -6,11 +6,11 @@
         <div data-bb-type="label-control-container">
             <div data-bb-type="row">
                 <div data-bb-type="label">Name:</div>
-                <input type="text" value="Loading .." id="cardName"/>
+                <input type="text" value="Loading .." id="cardNameInput"/>
             </div>
             <div data-bb-type="row">
                 <div data-bb-type="label">Description:</div>
-                <input type="text" value="Loading .." id="cardDescription"/>
+                <input type="text" value="Loading .." id="cardDescriptionInput"/>
             </div>
             <div data-bb-type="row">
                 <div data-bb-type="label">Move to other:</div>
