--- a/boards_list.html
+++ b/boards_list.html
@@ -3,9 +3,9 @@
 	 <div data-bb-type="image-list" data-bb-style="arrowlist" id="boardsArrayList"> </div>
 	
 	<div data-bb-type="action-bar">
-		<div data-bb-type="action" data-bb-style="tab" data-bb-img="images/actionBar/cog_dark_theme.png" onclick="bb.pushScreen('org_list.html', 'organizations');">Organizations</div>
-		<div data-bb-type="action" data-bb-style="tab" data-bb-selected="true" data-bb-img="images/actionBar/cog_dark_theme.png" onclick="bb.pushScreen('boards_list.html', 'boards');">Boards</div>
-		<div data-bb-type="action" data-bb-style="tab" data-bb-img="images/actionBar/cog_dark_theme.png" onclick="bb.pushScreen('my_account.html', 'my_account');">My Account</div>
+		<div data-bb-type="action" data-bb-style="tab" data-bb-img="images/org_icon.png" onclick="bb.pushScreen('org_list.html', 'organizations');">Organizations</div>
+		<div data-bb-type="action" data-bb-style="tab" data-bb-selected="true" data-bb-img="images/boards_icon.png" onclick="bb.pushScreen('boards_list.html', 'boards');">Boards</div>
+		<div data-bb-type="action" data-bb-style="tab" data-bb-img="images/my_profile_icon.png" onclick="bb.pushScreen('my_account.html', 'my_account');">My Account</div>
 		<div data-bb-type="action" data-bb-style="tab" data-bb-img="images/actionBar/cog_dark_theme.png" onclick="bb.pushScreen('notifications.html', 'notifications');">Notifications</div>
 	</div>
 </div>
