--- a/org_list.html
+++ b/org_list.html
@@ -2,9 +2,9 @@
 	<script  src="javascript/org_list.js"></script>
 	<div data-bb-type="image-list" data-bb-style="arrowlist" id="organizationsArrowList"></div>
 	<div data-bb-type="action-bar">
-		<div data-bb-type="action" data-bb-style="tab" data-bb-selected="true" data-bb-img="images/actionBar/cog_dark_theme.png" onclick="bb.pushScreen('org_list.html', 'organizations');">Organizations</div>
-		<div data-bb-type="action" data-bb-style="tab" data-bb-img="images/actionBar/cog_dark_theme.png" onclick="bb.pushScreen('boards_list.html', 'boards');">Boards</div>
-		<div data-bb-type="action" data-bb-style="tab" data-bb-img="images/actionBar/cog_dark_theme.png" onclick="bb.pushScreen('my_account.html', 'my_account');">My Account</div>
+		<div data-bb-type="action" data-bb-style="tab" data-bb-selected="true" data-bb-img="images/org_icon.png" onclick="bb.pushScreen('org_list.html', 'organizations');">Organizations</div>
+		<div data-bb-type="action" data-bb-style="tab" data-bb-img="images/boards_icon.png" onclick="bb.pushScreen('boards_list.html', 'boards');">Boards</div>
+		<div data-bb-type="action" data-bb-style="tab" data-bb-img="images/my_profile_icon.png" onclick="bb.pushScreen('my_account.html', 'my_account');">My Account</div>
 		<div data-bb-type="action" data-bb-style="tab" data-bb-img="images/actionBar/cog_dark_theme.png" onclick="bb.pushScreen('notifications.html', 'notifications');">Notifications</div>
 	</div>
 </div>
